[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/GameGUIEasyOneApartHalf.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 633, 40, 233, 78 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2239, 2338, 207, 105 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2239, 2688, 207, 105 )

[node name="pause_menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="menu_panel" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="menu_panel"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 60
custom_constants/margin_top = 120
custom_constants/margin_left = 60
custom_constants/margin_bottom = 120

[node name="HBoxContainer2" type="VBoxContainer" parent="menu_panel/MarginContainer"]
margin_left = 60.0
margin_top = 120.0
margin_right = 964.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="menu_panel/MarginContainer/HBoxContainer2"]
margin_right = 904.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="menu_panel/MarginContainer/HBoxContainer2/HBoxContainer"]
margin_left = 335.0
margin_right = 568.0
margin_bottom = 180.0

[node name="TextureRect" type="TextureRect" parent="menu_panel/MarginContainer/HBoxContainer2/HBoxContainer/CenterContainer"]
margin_top = 51.0
margin_right = 233.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 2
texture = SubResource( 1 )

[node name="VBoxContainer" type="HBoxContainer" parent="menu_panel/MarginContainer/HBoxContainer2"]
margin_top = 180.0
margin_right = 904.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 303
alignment = 1

[node name="Continue" type="TextureButton" parent="menu_panel/MarginContainer/HBoxContainer2/VBoxContainer"]
margin_left = 93.0
margin_right = 300.0
margin_bottom = 105.0
size_flags_vertical = 0
texture_normal = SubResource( 2 )

[node name="Exit" type="TextureButton" parent="menu_panel/MarginContainer/HBoxContainer2/VBoxContainer"]
margin_left = 603.0
margin_right = 810.0
margin_bottom = 105.0
size_flags_vertical = 2
texture_normal = SubResource( 3 )

[connection signal="pressed" from="menu_panel/MarginContainer/HBoxContainer2/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="menu_panel/MarginContainer/HBoxContainer2/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
